--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
 # Dependencies
 node_modules/
 
+# Python caches and virtualenvs
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage*
+htmlcov/
+.venv/
+venv/
+env/
+
+# Python packaging
+*.egg-info/
+.eggs/
+
 # Environment files (NEVER commit these)
 .env
 .env.local
@@ -19,6 +37,19 @@ dist-bundle/
 .swcinfo
 *.tsbuildinfo
 .swc/
+frontend/.svelte-kit/
+frontend/.vite/
+frontend/.turbo/
+backend/.turbo/
+
+# Test and coverage artifacts
+.nyc_output/
+coverage/
+
+# Package manager debug logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
 
 # Rust build artifacts
 intent-compiler/target/
@@ -28,6 +59,11 @@ target/
 .tmp.driveupload/
 nul
 *.tmp
+*.swp
+*.swo
+*.orig
+*.rej
+*.tgz
 
 # Claude Code
 .claude/
@@ -35,6 +71,9 @@ nul
 # IDE
 .vscode/
 .idea/
+
+# JetBrains project shelf
+.fleet/
 
 # OS
 .DS_Store
